# notairflow

./: .gitignore  Makefile  README.md  Readme.md  makefile  pyproject.toml  readme.md  requirements.txt  script.sh
NOTAIRFLOW/: __init__.py  classes.py  cores.py  decorator.py  graph.py  not_airflow.py  samples.py  test.py
src/NOTAIRFLOW/: cores.py  exceptions.py
src/NOTAIRFLOW.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/not_airflow/: __init__.py  cores.py  exceptions.py  samples.py
src/not_airflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/notairflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_installation.py
