[build-system]
requires = [
	"setuptools>=61.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "not_airflow"
version = "0.0.2"
authors = [
  { name="Thanh Tu, Do", email="tu.dothanh1906@gmail.com" },
]
description = "A small example package implementing Airflow DAG: structured job consist of multiple task and its dependency"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 	"classify-imports==4.2.0",
 	"contourpy==1.2.0",
 	"cycler==0.12.1",
 	"fonttools==4.50.0",
 	"kiwisolver==1.4.5",
 	"matplotlib==3.8.3",
 	"networkx==3.2.1",
 	"numpy==1.26.4",
 	"packaging==24.0",
 	"pillow==10.2.0",
 	"pyparsing==3.1.2",
 	"PyQt5==5.15.10",
 	"PyQt5-Qt5==5.15.2",
 	"PyQt5-sip==12.13.0",
 	"python-dateutil==2.9.0.post0",
 	"reorder-python-imports==3.12.0"
]

[project.urls]
Homepage = "iamtu.dev"
Issues = "https://github.com/pypa/sampleproject/issues"
